# rgbd_slam

./: README.md
config/: parameters.txt
rgbd_slam/: CMakeLists.txt  rgbd_slam.kdev4
rgbd_slam/.kdev4/: rgbd_slam.kdev4
rgbd_slam/document/: pcl编译引用
rgbd_slam/include/: slamBase.h
rgbd_slam/point_files/: aligned_pointcloud.pcd  pointcloud.pcd
rgbd_slam/src/: CMakeLists.txt  PointCloud.cpp  joinPointCloud.cpp  slamBase.cpp
